fixed spacing in the SDD.css and got rid of the really large margins

--- a/styles/sdd.css
+++ b/styles/sdd.css
@@ -2,295 +2,201 @@
 /* https://content.byui.edu/file/ec065ae0-f53b-46f4-8a96-185b30baa1c1/1/Course/CS364M00WritingGuidelines.html */
 
 * {
-    font-size: 12px;
-    font-family: Garamond;
+   font-size: 12px;
+   font-family: Garamond;
 }
 
 html {
-    padding: 50px 0;
-    background: lightgray;
+   padding: 50px 0;
+   background: lightgray;
+}
+
+p { margin-top: 0; }
+
+.indent {
+   padding-left: 20px;
+}
+
+.no-top-margin {
+   margin-top: 0;
 }
 
 div.page, div.super-page {
-    max-width: 600px;
-    background: white;
-    margin: auto;
-    margin-bottom: 10px;
-    padding: 60px;
-    line-height: 1.5;
-    position: relative;
+   max-width: 600px;
+   background: white;
+   margin: auto;
+   margin-bottom: 10px;
+   padding: 60px;
+   line-height: 1.5;
+   position: relative;
 }
-
 div.page {
-    height: 800px;
+   height: 800px;
 }
-
 div.page-number {
-    position: absolute;
-    top: 25px;
-    right: 25px;
-    font-size: 14px;
+   position: absolute;
+   top: 25px;
+   right: 25px;
+   font-size: 14px;
 }
 
 .title-page {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-flow: column;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   flex-flow: column;
 }
-
 .title-page h1 {
-    font-size: 25px;
+   font-size: 25px;
 }
 .title-page hr {
-    width: 100%;
+   width: 100%;
 }
 .title-page h2 {
-    margin: 0;
+   margin: 0;
 }
 
-header {
-    padding: 10px 0;
-}
-
-header>div {
-    font-size: 11px;
-}
+header { padding: 10px 0; }
+header>div { font-size: 11px; }
 
 h1,
 h2,
 h3,
 h4.big,
 h5.big {
-    font-weight: bold;
-    margin: 10px 0 0 0;
+   font-weight: bold;
+   margin: 10px 0 0 0;
 }
-
-h4,
-h5,
-h6 {
-    font-weight: unset;
-    margin: 0;
-}
-
-h1,
-h1 span {
-    font-size: 22px;
-    margin: 5px 0;
-    margin-bottom: 0;
-}
-
-h2,
-h2 span {
-    margin-top: 40px;
-    font-size: 18px;
-    margin-bottom: 0;
-}
-
-h3,
-h3 span {
-    font-size: 16px;
-    margin-bottom: 0;
-}
-
-.no-top-margin {
-    margin-top: 0;
-}
-
-h4,
-h4 span {
-    font-size: 14px;
-}
-
-h5,
-h5 span {
-    font-size: 12px;
-    margin: 0;
-}
-
-h6,
-h6 span {
-    font-size: 10px;
-    margin: 0;
-}
+h1, h1 span { font-size: 22px; }
+h2, h2 span { font-size: 18px; }
+h3, h3 span { font-size: 16px; }
+h4, h5, h6 { font-weight: unset; }
+h4, h4 span { font-size: 14px; }
+h5, h5 span { font-size: 12px; }
+h6, h6 span { font-size: 10px; }
 
 span.id {
-    padding-right: 5px;
-    letter-spacing: 2px;
-    font-weight: bold;
-}
-
-p {
-    margin-top: 0;
-    /* text-indent: 30px; */
-}
-
-p.no-indent {
-    text-indent: 0;
-}
-
-.level1 {
-    padding-left: 20px;
+   padding-right: 5px;
+   letter-spacing: 2px;
+   font-weight: bold;
 }
 
 ul {
-    margin: 0;
-    padding-left: 25px;
+   margin: 0;
+   padding-left: 25px;
 }
 
 .list-title {
-    margin-top: 5px;
-    margin-bottom: 0;
-}
-
-ol {
-    padding-left: 5px;
-}
-
-ol>li {
-    margin: 0;
-    padding: 0 0 0 2em;
-    text-indent: -2em;
-    list-style-type: none;
-    counter-increment: item;
-}
-
-ol>li:before {
-    display: inline-block;
-    width: 1.5em;
-    padding-right: 0.5em;
-    font-weight: bold;
-    text-align: right;
-    content: counter(item) ".";
-}
-
-ol.steps>li:before {
-    width: 4em;
-    content: "Step "counter(item) ":";
+   margin-top: 5px;
+   margin-bottom: 0;
 }
 
 ul.unlabeled {
-    list-style: none;
+   list-style: none;
 }
 
 ul.big>li,
 ul.big>li>span.id {
-    font-weight: bold;
-    font-size: 18px;
-}
-
-.indent {
-    padding-left: 20px;
-}
-
-.indent.visible {
-    margin-left: 3px;
-    border-left: 1px solid gray;
+   font-weight: bold;
+   font-size: 18px;
 }
 
 table {
-    border-collapse: collapse;
+   border-collapse: collapse;
 }
-
 table tr td,
 table tr th {
-    padding: 5px;
-    border: .5px solid black;
+   padding: 5px;
+   border: .5px solid black;
 }
-
 table tr th {
-    background-color: #ededed;
+   background-color: #ededed;
 }
-
 table tr:nth-child(odd) {
-    background-color: #f7f7f7;
+   background-color: #f7f7f7;
 }
 
 span.highlight {
-    background-color: yellow;
+   background-color: yellow;
 }
 
 img {
-    max-width: 100%;
+   max-width: 100%;
 }
 
 .auto-ID {
-    list-style: none;
+   list-style: none;
 }
 
 .auto-ID > li > ul {
-    list-style: disc;
+   list-style: disc;
 }
 
 .sign-off {
-    display: flex;
-    flex-direction: column;
-    align-content: center;
+   display: flex;
+   flex-direction: column;
+   align-content: center;
 }
 
 .sign-off h1 {
-    margin: 40px 0 10px
+   margin: 40px 0 10px
 }
 
 .sign-off .sign-row {
-    display: flex;
-    flex-direction: row;
+   display: flex;
+   flex-direction: row;
 }
 
 .sign-off .sign-row > div {
-    display: flex;
-    flex: 1;
-    height: 25px;
+   display: flex;
+   flex: 1;
+   height: 25px;
 }
 
 .sign-off .sign-row .blank {
-    flex: 1;
-    border-bottom: 1px solid black;
-    margin: 0 10px 10px;
+   flex: 1;
+   border-bottom: 1px solid black;
+   margin: 0 10px 10px;
 }
 
 .sign-off ul {
-    list-style: none;
-    display: flex;
-    flex-flow: row wrap;
+   list-style: none;
+   display: flex;
+   flex-flow: row wrap;
 }
 
 .sign-off ul > li {
-    width: 33%;
-}
-
-.s1 {
-    font-weight: bold;
+   width: 33%;
 }
 
 .table-of-contents h1 {
-    margin-top: 40px;
-    margin-bottom: 10px;
+   margin-top: 40px;
+   margin-bottom: 10px;
 }
 
 .table-of-contents a {
-    font-size: large;
+   font-size: large;
 }
 
 .center {
-    margin: auto;
-    width: 61%;
-    border: 1.5px solid black;
-    padding: 30px;
+   margin: auto;
+   width: 61%;
+   border: 1.5px solid black;
+   padding: 30px;
 }
 
 .row {
-    display: flex;
+   display: flex;
 }
 
 .row span:nth-child(2) {
-    flex: 1;
-    border-bottom: 1px dashed black;
-    margin-bottom: 6px;
+   flex: 1;
+   border-bottom: 1px dashed black;
+   margin-bottom: 6px;
 }
 
 .row .pageNumber {
-    font-size: 16px;
+   font-size: 16px;
 }
 
 /* stylesheet to be used specifically for SDD. */
